fix whitespace issue

--- a/src/styles/terminal.scss
+++ b/src/styles/terminal.scss
@@ -13,6 +13,7 @@
 	margin: 0;
 	position: absolute;
 	bottom: 1.2rem;
+	white-space: pre-wrap;
 }
 
 .input-form {
